--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "heyui": "^1.25.1",
     "js-md5": "^0.7.3",
     "style-loader": "^0.23.1",
+    "utils": "^0.3.1",
     "vue": "^2.5.2",
+    "vue-drag-verify": "^1.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
