--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "utils": "^0.3.1",
     "vue": "^2.5.2",
     "vue-drag-verify": "^1.0.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
